--- a/FE/package.json
+++ b/FE/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
