--- a/BE/package.json
+++ b/BE/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
+    "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.3",
     "nodemon": "^1.3.3",
