--- a/BE/package.json
+++ b/BE/package.json
@@ -24,6 +24,8 @@
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.3",
     "nodemon": "^1.3.3",
+    "npm": "^9.2.0",
+    "start": "^5.1.0",
     "validator": "^13.7.0",
     "xlsx": "^0.18.5"
   }
